--- a/src/style/global.less
+++ b/src/style/global.less
@@ -16,7 +16,9 @@ small {
   justify-content: center;
   align-items: center;
 }
-
+.flex-important {
+  display: flex !important;
+}
 .y-center {
   display: flex;
   align-items: center;
