--- a/src/style/filter.less
+++ b/src/style/filter.less
@@ -3,6 +3,10 @@
   border-radius: 6px;
   background: #fff;
   box-shadow: 0 1px 6px rgba(0, 0, 0, .2);
+  .custom-filter-dropdown-radio{
+    margin-top: 8px;
+    padding: 0 8px;
+  }
 }
 
 .custom-filter-dropdown input {
