--- a/src/style/list.less
+++ b/src/style/list.less
@@ -2,6 +2,7 @@
   .ant-list-header {
     border: 0px !important;
   }
+
   .ant-list-pagination {
     position: absolute;
     bottom: -10px;
@@ -17,6 +18,7 @@
     background-color: @transparent-dark;
     border-radius: 45px;
   }
+
   .list-item-hover-border {
     height: 60.5px;
     width: 60.5px;
@@ -32,6 +34,7 @@
   .list-item-hover-plus {
     display: none;
   }
+
   .list-item-hover-border {
     display: none;
   }
@@ -48,6 +51,7 @@
     padding-bottom: 5px !important;
     padding-top: 5px !important;
   }
+
   .ant-list-pagination {
     position: absolute;
     bottom: 0;
@@ -58,9 +62,11 @@
 .video-list-item:hover {
   border-radius: 3px;
   border: 1px solid @grey !important;
+
   .video-list-item-top {
     display: flex;
   }
+
   .video-list-item-buttons {
     display: flex;
   }
@@ -71,6 +77,7 @@
   height: 98px;
   border-radius: 3px;
   border: 1px solid @min-black !important;
+
   .video-list-item-buttons {
     z-index: 2;
     display: none;
@@ -78,28 +85,34 @@
     top: 25%;
     margin-top: -26px;
     margin-left: 22px;
+
     .video-list-item-button {
       background-color: @transparent-black;
       color: @transparent-white;
     }
+
     .video-list-item-progress {
       background-color: @transparent-black;
       border-radius: 45%;
       margin-left: 12px;
       margin-right: 12px;
+
       span {
         color: @transparent-white;
       }
     }
+
     .video-list-item-button-unabled {
       background-color: @transparent-black;
       color: @transparent-white;
+
       span {
         margin-left: -3px;
         font-size: 5px;
       }
     }
   }
+
   .video-list-item-top-left {
     position: absolute;
     left: 0;
@@ -110,17 +123,20 @@
     padding-left: 5px;
     padding-right: 5px;
   }
+
   .video-list-item-img {
     z-index: 1;
     width: 160px;
     height: 90px;
   }
+
   .video-list-item-bottom {
     position: absolute;
     bottom: 3%;
     width: 160px;
     height: 18%;
     background-color: @transparent-black;
+
     .video-list-item-bottom-text {
       color: @transparent-white;
     }
@@ -132,10 +148,12 @@
     width: 160px;
     height: 18%;
     background-color: @transparent-black;
+
     .video-list-item-bottom-text {
       color: @transparent-white;
     }
   }
+
   .video-list-item-top {
     display: none;
     position: absolute;
@@ -143,16 +161,19 @@
     margin-left: 40px;
     height: 18%;
     background-color: @transparent-black;
+
     .video-list-item-bottom-text {
       color: @transparent-white;
     }
   }
+
   .video-list-item-checkbox {
     z-index: 11;
     position: absolute;
-    margin-top: 5px;
-    margin-left: 5px;
+    right: 0;
+    top: 0;
   }
+
   .video-list-item-draggable {
     font-size: 20px;
     z-index: 11;
