add football apis, fix bugs

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -243,6 +243,9 @@
 .border-gray{
   border: @border-color solid 1px;
 }
+.border-bottom-gray{
+  border-bottom: @border-color solid 1px;
+}
 .cell-hover {
 
 }
