--- a/src/style/list.less
+++ b/src/style/list.less
@@ -173,7 +173,12 @@
     right: 0;
     top: 0;
   }
-
+  .video-list-item-hint {
+    z-index: 11;
+    position: absolute;
+    right: 0;
+    bottom: 3%;
+  }
   .video-list-item-draggable {
     font-size: 20px;
     z-index: 11;
