--- a/src/style/form.less
+++ b/src/style/form.less
@@ -53,3 +53,51 @@
   width: 160px;
   height: 90px;
 }
+
+.form-qrcode {
+  margin-top: 20px;
+  width: 90px;
+  height: 90px;
+  overflow: hidden;
+  div div {
+    width: 90px !important;
+    height: 90px !important;
+    margin-right: 0px !important;
+    margin-bottom: 0px !important;
+    display: inline-block !important;
+    border: 0px !important;
+  }
+  div span {
+    width: 90px !important;
+    height: 90px !important;
+    padding: 0px !important;
+  }
+}
+.form-qrcode-img{
+  width: 90px;
+  height: 90px;
+}
+
+.form-page {
+  margin-top: 20px;
+  width: 90px;
+  height: 160px;
+  overflow: hidden;
+  div div {
+    width: 90px !important;
+    height: 160px !important;
+    margin-right: 0px !important;
+    margin-bottom: 0px !important;
+    display: inline-block !important;
+    border: 0px !important;
+  }
+  div span {
+    width: 90px !important;
+    height: 160px !important;
+    padding: 0px !important;
+  }
+}
+.form-page-img{
+   width: 90px;
+   height: 160px;
+ }
