--- a/src/style/login.less
+++ b/src/style/login.less
@@ -4,16 +4,19 @@
   align-items: center;
   height: 100%;
   background: #f3f3f3;
+
   .login-form {
     width: 320px;
-    height: 340px;
+    height: 380px;
     padding: 36px;
     box-shadow: 0 0 100px rgba(0, 0, 0, .08);
     background: #fff;
+
     .login-logo {
       text-align: center;
       height: 40px;
       line-height: 40px;
+
       span {
         vertical-align: text-bottom;
         font-size: 16px;
@@ -22,4 +25,9 @@
       }
     }
   }
+}
+
+.login-form-button {
+  width: 100%;
+  margin-left: 0 !important;
 }
